2008-03-21 Martin Schaaf <mascha@ma-scha.de>

	* debian/control
	o add newer standard version
	* src/ImageThought.py
	o fix exception by only replace whole text if a parent node exist

2008-03-21 Martin Schaaf <mascha@ma-scha.de>

	* debian/*
	o add debian package management support
	* configure.ac
	o set version to 0.4.0rc2

2008-03-21 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MainWindow.py
	Add export to pdf.

2008-03-21 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MapList.py
	* src/Browser.py
	Save and load browser size, fixing issue 18

2008-03-21 Martin Schaaf <mascha@ma-scha.de>

	* src/DrawingThought.py
	* src/MainWindow.py
	* src/utils.py
	* src/ImageThought.py
	* src/TextThought.py
	o add svg export (patch by Matthias Vogelgesang)

2008-03-21  Don Scorgie  <Don@Scorgie.org>

	* src/TextThought.py: 
	* src/BaseThought.py:
	* src/Links.py:
	* src/DrawingThought.py:
	Fix potential exception on map opening

	* src/DrawingThought.py:
	Give all points their own unique colour

	* src/MMapArea.py:
	Update the colour selectors when loading
	a map

2008-03-21 Martin Schaaf <mascha@ma-scha.de>

	* src/DrawingThought.py
	* src/MainWindow.py
	* src/MMapArea.py
	* src/Browser.py
	* src/ImageThought.py
	* src/TextThought.py
	* data/labyrinth-ui.xml
	* data/labyrinth.glade
	o add import/export of maps (patch by Matthias Vogelgesang)
	* Authors
	o added Matthias Vogelgesang and me

2008-03-20 Martin Schaaf <mascha@ma-scha.de>

	* src/MMapArea.py
	o check for attribute transform on coord transformation
	* src/MainWindow.py
	o fix color update if a thought is selected that doesn't have background or foreground colors

2008-03-18 Martin Schaaf <mascha@ma-scha.de>

	* src/MMapArea.py
	* src/MainWindow.py
	o update color button when selecting thought (patch by Matthias Vogelgesang)

2008-03-03 Martin Schaaf <mascha@ma-scha.de>

	* ChangeLog
	o add missing entries

2008-02-18  Don Scorgie  <Don@Scorgie.org>

	* src/MMapArea.py: 